# p99

./: .gitignore  ABI.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  ctest_cmake.sh  p99.def  p99.pc.in  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_benchmarks.sh  run_all_examples.sh
.github/workflows/: ci.yml
.sis/: script_info_lines.txt
benchmarks/: benchmark_histogram.c
cmake/: p99Config.cmake.in
docs/: Doxyfile.in  mainpage.md
examples/: build_histogram.c  build_histogram_cxx.cpp
include/p99/: p99.h  p99.hpp
src/: dllmain.c  histogram.c  p99.rc  p99_portable.h
test/scratch/: README.md
test/scratch/consumer_fetchcontent/: CMakeLists.txt  main.c
tests/: test_histogram.c  test_histogram.cpp
vcpkg/: README.md
vcpkg/ports/p99/: portfile.cmake  usage  vcpkg.json
